authentication_app_frontend/kubernetes/frontend_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-service
  namespace: final-project
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend-app
